[package]
name = "pix_market_contract"
version = "0.1.0"
edition = "2021"
authors = ["Favour Aniogor <@SuperDevFavor> <faniogor@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
